[package]
name = "caff"
version = "0.1.1"
description = "Program like caffeine that keeps windows awake"
repository = "https://github.com/ironhaven/caff"
authors = ["Nick Farley <nick-1154@hotmail.com>"]
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3.9"
default-features = false
#features = ["winuser", "impl-default", "synchapi", "winbase", "consoleapi", "processenv"]
features = ["winuser", "impl-default"]


[profile.release]
panic = "abort"
lto = true
codgen-units = 1
opt-level = 'z'